# django-dkron

./: .gitignore  MANIFEST.in  Makefile  README.md  setup.cfg  tox.ini
.github/workflows/: publish_develop.yml  publish_test.yml  test.yml
dkron/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  urls_api.py  utils.py  views.py
dkron/management/commands/: cleanup_dkron.py  resync_dkron.py  run_dkron.py  run_dkron_async_command.py
dkron/migrations/: 0001_initial_20210729.py  0002_job_retries.py  0003_alter_job_schedule.py
dkron/templates/admin/dkron/job/: change_list_object_tools.html
dkron/templatetags/: dkron.py
testapp/: requirements.txt  tests.py
testapp/testapp/: settings.py  urls.py
testapp/tests/: test_generic.py  test_namespace.py  test_other.py
