[metadata]
name = django-dkron
version = attr: dkron.__version__
description = Manage and run jobs in Dkron from your django project
author = PPB - InfoSec Engineering
author_email = surface@paddypowerbetfair.com
url = https://github.com/surface-security/django-dkron
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Environment :: Web Environment
    Topic :: Software Development

[options]
zip_safe = False
include_package_data = True
packages = find:
# requires 3.9 due to django-notification-sender...
python_requires = >=3.9
install_requires =
    Django >= 3.0
    django-logbasecommand < 1
    django-notification-sender < 1
    requests > 2, < 3
    # FIXME: remove this "feature" (dependency)? move it to optional?
    django-after-response == 0.2.2

[options.packages.find]
exclude =
    tests
    tests.*

[coverage:run]
source = dkron

[coverage:report]
show_missing = True
skip_covered = True
